// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Footer FooterNoOverride smoke-test 1`] = `
<div class="MuiBox-root css-sw8jpj">
  Nebraska
</div>
`;

exports[`Footer FooterOverride smoke-test 1`] = `
<div class="MuiBox-root css-sw8jpj">
  Some Pro Update Service 1.2.3
</div>
`;
